CAGRID-844: if the container is secure, give it LOTS of PermGen space
git-svn-id: https://ncisvn.nci.nih.gov/svn/cagrid/branches/caGrid-1_5_release/Software/core@18626 dd7b0c16-3c94-4492-92de-414b6a06f0b1